# TP

./: README.md
lab1/: CMakeLists.txt  cars.txt  main.cpp  test.txt
lab1/entity/: Auto.cpp  Auto.h  Bus.cpp  Bus.h  Garage.cpp  Garage.h  Motorcycle.cpp  Motorcycle.h  MyException.h
lab1/keeper/: keeper.cpp  keeper.h  struct.h
lab1/ui/: menu.cpp  menu.h  ui.cpp  ui.h
lab2/: CMakeLists.txt  file.txt  main.cpp  test.txt
lab2/part1/: Keeper.h  Menu.cpp  Menu.h  MyException.h  Student.cpp  Student.h  StudentWrap.h  keeper.cpp
lab2/part2/: part2.cpp  part2.h
